Feat/eventbridge (#10)
* Migrate git to eventbridge

* Add helm event

* Fix helm-to-json path (custom bin could be removed now as event lambdas can run for 15 miniutes)

* Add docker event

* FIx up error in cron-api, clean up naming

* Ensure upsert events contain https urls were required

* Mark appversion for helm charts as optional

* Cleanup imports

* Use pyyaml again now that we have time to waste ;-)

* Store the full path to the index.yaml file in the dynamodb PK

* Install pyyaml for helm chart parsing

* Add debug logging

* Add cron lambda to send an update event for any entry in dynamodb

* Cleanup aiohttp

* Remove unsued path

* Add cron lambda and event
