# src/docker-api/main.py
@@ -6,92 +6,38 @@
 """
 
 
-from whattheversion.utils import ApiError, respond, parse_docker_event, setup_logging
-from whattheversion.docker import create_docker_registry, DockerRepositoryQuay, DockerRepositoryV2, DockerRepositoryDockerHub
-from whattheversion.models import DockerResponse, DockerImageTags, DockerImageTag, DynamoDbEntry, compare_versions
+from whattheversion.utils import ApiError, respond, parse_docker_api_event, setup_logging
+from whattheversion.models import DockerResponse
 from whattheversion.dynamodb import DynamoDbClient
-from typing import List
-
-
-def _remove_stored_tags(dynamodb_entry: DynamoDbEntry, repository_tags: DockerImageTags) -> List[str]:
-    """
-    compare docker tags found in dynamodb with tags found the docker repository
-    remove all the tags already avaiable in dynamidb and return the remaining tags to
-    get from the repository
-    :param dynamodb_entry:
-    :param found_tags:
-    :return:
-    """
-
-    # if no entry is found in dynamodb all tags need retrieval
-    if not dynamodb_entry:
-        return [v.tag for v in repository_tags.tags]
-
-    stored_tags = [v.version for v in dynamodb_entry.versions.versions]
-    remaining_tags = [v.tag for v in repository_tags.tags]
-    remaining_tags = [v for v in remaining_tags + stored_tags if v not in stored_tags]
-
-    return remaining_tags
+from whattheversion.eventbus import EventBusClient
 
 
 setup_logging()
 def handler(event, context):
 
     try:
+        setup_logging()
+        eventbus = EventBusClient()
         db = DynamoDbClient()
-        docker_event = parse_docker_event(event)
-        docker_registry = create_docker_registry(registry=docker_event.registry)
-        docker_repository = docker_registry.get_repository(image=docker_event.image)
-        dynamodb_entry = db.get_docker_entry(registry=docker_registry.registry, repository=docker_repository.repository)
-        repository_tags = docker_repository.get_repository_tags()
+        docker_event = parse_docker_api_event(event)
 
-        are_latest_versions_the_same = False
-        if dynamodb_entry:
-            are_latest_versions_the_same = compare_versions(
-                versions_a=dynamodb_entry.versions.get_versions_sorted_by_timestamp()[0],
-                versions_b=repository_tags.convert_to_versions().get_versions_sorted_by_timestamp()[0]
+        dynamodb_entry = db.get_docker_entry(registry=docker_event.registry,
+                                             repository=docker_event.repository)
+        if not dynamodb_entry or not  dynamodb_entry.versions.versions:
+            eventbus.put_docker_event(registry=docker_event.registry, repository=docker_event.repository)
+            raise ApiError(
+                http_status=404,
+                error_message=f'No versions found for docker registry "{docker_event.registry}" and repository "{docker_event.repository}". Sent event to collect '
+                              f'version info! Please try again in a minute or two.'
             )
-
-        if not are_latest_versions_the_same:
-            # depending on the repository type the tags are collected
-            # either via custom api (quay.io / docker hub) or via the registry v2 api
-            if isinstance(docker_repository, DockerRepositoryQuay):
-                db.upsert_docker_entry(registry=docker_registry.registry,
-                                       repository=docker_repository.repository,
-                                       tags=repository_tags)
-            if isinstance(docker_repository, DockerRepositoryDockerHub):
-                db.upsert_docker_entry(registry=docker_registry.registry,
-                                       repository=docker_repository.repository,
-                                       tags=repository_tags)
-            elif isinstance(docker_repository, DockerRepositoryV2):
-                # remove all entries which are already in the dynamodb table
-                remaining_tags = _remove_stored_tags(
-                    dynamodb_entry=dynamodb_entry,
-                    repository_tags=repository_tags
-                )
-
-                # run trough the remaining entries in small batches as the lambda will
-                # run into a timeout with bigger repos
-                for i in range(0, len(remaining_tags), 10):
-                    tags_batch = DockerImageTags(tags=[DockerImageTag(tag=t) for t in remaining_tags[i:i + 10]])
-                    tags_batch = docker_repository.get_digests_for_tags(tag_list=tags_batch)
-                    tags_batch = docker_repository.get_timestamp_for_tags(tag_list=tags_batch)
-
-                    db.upsert_docker_entry(registry=docker_registry.registry,
-                                           repository=docker_repository.repository,
-                                           tags=tags_batch)
-
-
-            dynamodb_entry = db.get_docker_entry(registry=docker_registry.registry,
-                                                 repository=docker_repository.repository)
 
         latest_version = dynamodb_entry.versions.get_latest_version(regexp=docker_event.regexp)
 
         response = DockerResponse(
-            registry=docker_registry.registry,
+            registry=docker_event.registry,
             version=latest_version.version,
             timestamp=latest_version.timestamp,
-            image=docker_repository.repository,
+            repository=docker_event.repository,
             digest=latest_version.digest,
         )
 
@@ -110,19 +56,19 @@ if __name__ == '__main__':
     event = dict(
         body=json.dumps(dict(
             # # dockerhub examples
-            image='linuxserver/sabnzbd',
-            regexp='^[0-9]+\.?[0-9]+\.?[0-9]+$'
-            # image='filebrowser/filebrowser',
-            # regexp='^v[0-9]+\.?[0-9]+\.?[0-9]+$',
+            # repository='linuxserver/sabnzbd',
+            # regexp='^[0-9]+\.?[0-9]+\.?[0-9]+$'
+            repository='filebrowser/filebrowser',
+            regexp='^v[0-9]+\.?[0-9]+\.?[0-9]+$',
 
             # k8s.gcr.io example
             # registry='k8s.gcr.io',
-            # image='external-dns/external-dns',
+            # repository='external-dns/external-dns',
             # regexp='^v[0-9]+\.?[0-9]+\.?[0-9]+$'
             #
             # # quay.io example
             # registry='quay.io',
-            # image='oauth2-proxy/oauth2-proxy',
+            # repository='oauth2-proxy/oauth2-proxy',
             # regexp='^v[0-9]+\.?[0-9]+\.?[0-9]+$'
         ))
     )
